[bumpversion]
current_version = 0.7.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:andebox]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = andebox
url = https://github.com/russoz/andebox
project_urls = 
	Bug Tracker = https://github.com/russoz/andebox/issues
	Source Code = https://github.com/russoz/andebox
description = Ansible Developer's Box
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexei Znamensky
author_email = russoz@gmail.com
maintainer = Alexei Znamensky
maintainer_email = russoz@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
	Development Status :: 2 - Pre-Alpha
	
	Environment :: Console
	Framework :: Ansible
	
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	
	Operating System :: OS Independent
	
	License :: OSI Approved :: MIT License
	
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	
	Topic :: Software Development :: Testing
	Topic :: Utilities
keywords = 
	ansible
